# artemis-mev-share-template

./: Cargo.toml  README.md
.github/workflows/: contracts.yml
bindings/src/: counter.rs
bot/: Cargo.toml
bot/src/: main.rs  simple_backrun.rs
