[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "../bindings" }
ethers = { version = "2", default-features = false, features = ["rustls"] }
eyre = "0.6"
tokio = { version = "1.19", features = ["full"] }
async-trait = "0.1.64"
anyhow = "1.0.70"
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
mev-share = "0.1.4"
